align fix according to the window height

--- a/communication/resources/lobby.css
+++ b/communication/resources/lobby.css
@@ -187,7 +187,7 @@
 #drawing-board-wrapper {
     width: 100%;
     height: 0;
-    padding-bottom: 400px;
+    /* padding-bottom: 400px; */
     position: relative;
     grid-row-start: 3;
     grid-row-end: 4;
